samples/_failures_safe/1761162773_947b67_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83af5df0.c: In function ‘main’:
./samples/SAFE/__tmp_83af5df0.c:162:5: error: expected declaration or statement at end of input
  162 |     floyd_warshall(&graph, dist);
      |     ^~~~~~~~~~~~~~
